--- a/frontend/src/components/Footer/index.less
+++ b/frontend/src/components/Footer/index.less
@@ -2,6 +2,7 @@
     //border-top: 0.5px solid rgba(0, 0, 0, 0.2);
     box-shadow: 1px 3px 1px 3px rgba(0, 21, 41,.08);
     background: #fff;
+    //height: 100px;
     .brand {
         height: 90px;
         position: relative;
