--- a/frontend/src/global.css
+++ b/frontend/src/global.css
@@ -1,7 +1,7 @@
 html, body, #root {
-  height: 100%;
-}
-
-body {
-  margin: 0;
-}
+	height: 100vh;
+	box-sizing: border-box;
+	margin: 0;
+	font-family: 'Be Vietnam', sans-serif;
+	-webkit-font-smoothing: antialiased;
+};
