handle change page

--- a/frontend/src/pages/Dashboard/index.less
+++ b/frontend/src/pages/Dashboard/index.less
@@ -11,12 +11,21 @@
     .projectsList {
         margin-top: 25px;
         margin-bottom: 40px;
-        .projectItem {
-            cursor: pointer;
-            padding-left: 12px;
-            padding-right: 12px;
-            &:hover {
-                background: rgba(128, 128, 128, 0.03);
+        .actions {
+            margin-bottom: 24px;
+            margin-top: 12px;
+            .sortBy {
+                text-align: right;
+            }
+        }
+        .projects {
+            .projectItem {
+                cursor: pointer;
+                padding-left: 12px;
+                padding-right: 12px;
+                &:hover {
+                    background: rgba(128, 128, 128, 0.03);
+                }
             }
         }
     }
