--- a/frontend/src/pages/Project/index.less
+++ b/frontend/src/pages/Project/index.less
@@ -1,10 +1,11 @@
 .project {
+    
     .header {
         background: rgba(29, 165, 122, 0.04);
         margin-bottom: 10px;
         padding: 16px;
         .title {
-            color: @primary-color;
+            color: tomato;
             .icon {
                 font-size: 44px;
             }
@@ -45,6 +46,34 @@
                     margin-left: 12px;
                 }
                 margin-bottom: 12px;
+            }
+        }
+    }
+    .tasks {
+        .newTask {
+            padding: 24px 16px;
+        }
+        .list {
+            background: url(https://images.pexels.com/photos/956999/milky-way-starry-sky-night-sky-star-956999.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260);
+            min-height: calc(100vh - 266px);
+            padding: 12px 16px;
+            .stage {
+                background: transparent;
+                .wrapper {
+                    background: white;
+                    border-radius: 6px;
+                    border: 0.5px solid @primary-color;
+                    .wrapper2 {
+                        background: rgba(128, 128, 128, 0.2);
+                        padding: 16px;
+                        .title {
+                            text-transform: uppercase;
+                            font-size: 18px;
+                            font-weight: bold;
+                            margin-bottom: 24px;
+                        }
+                    }
+                }
             }
         }
     }
